--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -19,6 +19,7 @@
     <div class="controls">
       <%= f.text_field :name, :class => 'form-control' %>
     </div>
+    <%#= error_span(@image[:name]) %>
     <%= f.error_span(:name) %>
   </div>
 
@@ -27,6 +28,7 @@
     <div class="controls">
       <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
     </div>
+    <%#= error_span(@image[:picture]) %>
     <%= f.error_span(:picture) %>
   </div>
 
